# advent2024

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: day01.rs  day02.rs  day03.rs  main.rs
