[package]
name = "advent2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-main = { version = "0.5.0", features = ["bench"] }
grid = "0.12.0"
itertools = "0.12.0"
memoize = "0.4.1"
pathfinding = "4.4.0"
regex = "1.10.2"
serde_json = "1.0.108"
